# cti-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: readme.md
docs/mode/: readme.md
docs/platform/: readme.md
docs/source/: readme.md
include/: cti.h  scpi.h  udaq.h  visa.h
include/cti/: common.h  gpio.h  native.h  platform.h  udaq.h  version.h  visa.h
include/cti/platform/: comms.h  io.h  types.h  wifi.h
include/scpi/: scpi_core.h  scpi_errors.h
include/visa/: analog.h  core.h  digital.h  i2c.h  pwm.h  spi.h  uart.h  visa_core.h  wifi.h
lib/: scpi-parser.cmake
platform/: readme.md
platform/avr/: CMakeLists.txt  avr-toolchain.cmake  avr.inc.cmake
platform/avr/boards/arduino-uno/: cti_board.cmake
platform/avr/platform/: avr_timer.cpp
platform/avr/src/: avr_serial.cpp  avr_timer.cpp
platform/common/: build_timestamp.cmake  cti.cmake  cti_features.cmake  readme.md  version.cmake
platform/common/include/CTI/: build.h
platform/rp2040/: CMakeLists.txt  main-visa-udaq.cpp  readme.md  rp2040.inc.cmake
platform/rp2040/boards/pi_pico_w/: readme.md
platform/rp2040/boards/pico/: cti_board.cmake  cti_board.h  pi_pico.cpp  pi_pico_status_led.cpp  pi_pico_stdio.cpp  readme.md
platform/rp2040/boards/pico_w/: cti_board.cmake  cti_board.h  pi_pico_w_status_led.cpp  pi_pico_wifi.cpp  pico_w.cpp
platform/rp2040/boards/wizfi360/: cti_board.cmake  cti_board.h  readme.md
platform/rp2040/platform/: pi_pico_comms.cpp  pi_pico_io.cpp  pi_pico_platform.cpp  pi_pico_pwm.cpp  pi_pico_timer.cpp  pi_pico_visa.cpp
source/: cti.cmake  main.cpp
source/platform/: core.cpp  info.cpp  io.cpp  platform.cmake
source/scpi/: scpi.cmake  scpi_error_queue.cpp  scpi_node.cpp  scpi_parser.cpp
source/visa/: analog.cpp  core.cpp  digital.cpp  i2c.cpp  pwm.cpp  spi.cpp  uart.cpp  visa.cmake  visa_core.cpp  wifi.cpp
